--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,19 @@ header{
 }
 
 a {
-    color: white;
+    color: #FFF;
     font-size: 20px;
+    font-family: 'Fira Code', Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    text-decoration: none;
+    margin-right: 30px;
+}
+
+#button{
+    display: inline-block;
+    background-color: #74B9FF;
+    height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 5px 5px 0px #000;
 }
