--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ nav{
 a {
     color: #FFF;
     font-size: 20px;
-    font-family: 'Fira Code', Arial, Helvetica, sans-serif;
+    font-family: Fira Code, Helvetica, Arial, sans-serif;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
