--- a/css/index.css
+++ b/css/index.css
@@ -8,19 +8,35 @@ nav{
 }
 
 a {
+    display: inline-flex;
+    align-items: center;
     color: #FFF;
     font-size: 20px;
-    font-family: Fira Code, Helvetica, Arial, sans-serif;
+    font-family: Fira Code, sans-serif, Arial, Helvetica ;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
 }
 
+a::before{
+    content: '';
+    background-color: #74B9FF;
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+}
+
+span{
+    background-color: #74B9FF;
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+    
+}
+
 #button{
     display: inline-block;
     background-color: #74B9FF;
-    height: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
     box-shadow: 5px 5px 0px #000;
+    padding: 18px 20px;
 }
