--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,17 @@
 header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #AF2D2D;
+    border-bottom: 10px solid #2d3436;
+    padding: 10px 20px;
+
+}
+
+h1{
+    font-family: "Press Start 2P", sans-serif;
+    color: #FFF;
+    text-shadow: 5px 5px 0px #2d3436
 }
 
 nav{
@@ -12,7 +24,7 @@ a {
     align-items: center;
     color: #FFF;
     font-size: 20px;
-    font-family: Fira Code, sans-serif, Arial, Helvetica ;
+    font-family: "Fira Code", sans-serif, Arial, Helvetica ;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
@@ -37,6 +49,7 @@ span{
 #button{
     display: inline-block;
     background-color: #74B9FF;
-    box-shadow: 5px 5px 0px #000;
+    box-shadow: 5px 5px 0px #2d3436;
     padding: 18px 20px;
+    margin-right: 0;
 }
