Create component box

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -2,6 +2,5 @@ h2{
     font-family: "Press Start 2P", sans-serif;
     font-size: 40px;
     color: #74B9FF;
-    text-shadow: 4px 4px 0px #2d3436
-    
+    text-shadow: 4px 4px 0px #000;   
 }
