Create the banner component

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #AF2D2D;
-    border-bottom: 10px solid #2d3436;
+    border-bottom: 10px solid #000;
     padding: 10px 20px;
 
 }
