--- a/css/components/logo.css
+++ b/css/components/logo.css
@@ -1,5 +1,5 @@
 .logo {
     font-family: "Press Start 2P", sans-serif;
     color: #FFF;
-    text-shadow: 5px 5px 0px #2d3436
+    text-shadow: 5px 5px 0px #000
 }
