--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,9 @@
     color: #74B9FF;
     text-shadow: 4px 4px 0px #000;   
 }
+
+.title.-second{
+    color: #000;
+    text-shadow: none;
+    text-align: center;
+}
