--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner{
+.main-banner{
     box-sizing: border-box;
     background-image: url(../../Assets/Img/Photo.png);
     background-repeat: no-repeat;
@@ -9,19 +9,19 @@
     padding-left: 90px;    
 }
 
-.banner .wrapper{
+.main-banner .wrapper{
     display: flex;
     flex-direction: column;
     width: 700px;
     
 }
 
-.banner .box{
+.main-banner .box{
     margin-bottom: 48px;
     
 }
 
-.banner .navigation{
+.main-banner .navigation{
     display: flex;
     justify-content: space-around;
 }
