--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -1,4 +1,4 @@
-.header{
+.main-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,6 +8,6 @@
 
 }
 
-.header .navigtion{
+.main-header .navigtion{
     text-align: right;
 }
