--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -2,5 +2,7 @@
     color: #FFF;
     font-size: 30px;
     font-weight: 300;
-    line-height: 1.3; 
+    line-height: 1.3;
+    padding-left: 50px;
+    padding-right: 50px;
 }
