--- a/css/components/main-form.css
+++ b/css/components/main-form.css
@@ -1,3 +1,12 @@
 .main-form{
     display: inline-block;
+    padding:50px 40px;
+}
+
+.main-form .main-input{
+    margin-bottom: 20px;
+}
+
+.main-form .main-input.-textarea{
+    margin-bottom: 40px;
 }
